--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -341,7 +341,8 @@
     <PostBuildEvent>xcopy "$(TargetPath)" "$(SolutionDir)artifacts\build\SharpShell\" /F /R /Y /I</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>copy "$(SolutionDir)artifacts\build\SharpShellNativeBridge\*.*" "$(ProjectDir)NativeBridge</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
