--- a/SharpShellNativeBridge/SharpShellNativeBridge/SharpShellNativeBridge.vcxproj
+++ b/SharpShellNativeBridge/SharpShellNativeBridge/SharpShellNativeBridge.vcxproj
@@ -30,6 +30,7 @@
     </SccLocalPath>
     <SccProvider>
     </SccProvider>
+    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
