PostBuildEvent compatability fix
• PlatformTarget being set to Win32 breaks the build process for Platform Toolset v143, changing to x86 fixes this issue
• Leaving the platform target at v141 and making the adjustment still succeeds in building (though this was tested with Visual Studio 2022)

--- a/SharpShellNativeBridge/SharpShellNativeBridge/SharpShellNativeBridge.vcxproj
+++ b/SharpShellNativeBridge/SharpShellNativeBridge/SharpShellNativeBridge.vcxproj
@@ -131,7 +131,7 @@ xcopy "$(TargetPath)" "$(ProjectDir)..\artifacts\build\SharpShellNativeBridge\" 
 xcopy "$(TargetPath)" "$(ProjectDir)..\artifacts\build\SharpShellNativeBridge\" /F /R /Y /I
 
 echo "Running x86 build..."
-msbuild "$(ProjectPath)" /p:PlatformTarget=Win32 /p:Configuration=$(ConfigurationName)</Command>
+msbuild "$(ProjectPath)" /p:PlatformTarget=x86 /p:Configuration=$(ConfigurationName)</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>Writing project to NativeBridge Manifest Location</Message>
@@ -181,7 +181,7 @@ xcopy "$(TargetPath)" "$(ProjectDir)..\artifacts\build\SharpShellNativeBridge\" 
 xcopy "$(TargetPath)" "$(ProjectDir)..\artifacts\build\SharpShellNativeBridge\" /F /R /Y /I
 
 echo "Running x86 build..."
-msbuild "$(ProjectPath)" /p:PlatformTarget=Win32 /p:Configuration=$(ConfigurationName)</Command>
+msbuild "$(ProjectPath)" /p:PlatformTarget=x86 /p:Configuration=$(ConfigurationName)</Command>
       <Message>Writing project to NativeBridge Manifest Location</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
